--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,9 @@ include_package_data = true
 python_requires = >=3.9
 install_requires =
     wagtail>=4.2.2
+    django-filter>=22.1
+    shapely>=2.01
+    geopandas>=0.12.2
+
+
+
