--- a/setup.cfg
+++ b/setup.cfg
@@ -26,9 +26,12 @@ include_package_data = true
 python_requires = >=3.9
 install_requires =
     wagtail>=4.2.2
-    django-filter>=22.1
     shapely>=2.0.1
     geopandas>=0.12.2
+    django-filter>=22.1
+    django-countries>=7.5.1
+    wagtail-cache>=2.2.0
+
 
 
 
