--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     geopandas>=0.12.2
     django-filter>=22.1
     django-countries>=7.5.1
+    django-countries-geoextent>=0.0.1
     wagtail-cache>=2.3.0
 
 
