--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     django-countries>=7.5.1
     django-countries-geoextent>=0.0.1
     wagtail-cache>=2.3.0
+    wagtail-modeladmin>=1.0.0
 
 
 
