--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = adm-boundary-manager
-version = 0.2.2
+version = 0.2.3
 description = Load, manage and visualize Administrative Boundaries Data in Wagtail
 long_description = file:README.md
 long_description_content_type = text/markdown
@@ -33,6 +33,8 @@ install_requires =
     django-countries-geoextent>=0.0.1
     wagtail-cache>=2.3.0
     wagtail-modeladmin>=1.0.0
+    fiona
+
 
 
 
